--- a/suwo_testing.ipynb
+++ b/suwo_testing.ipynb
@@ -33,7 +33,7 @@
     {
       "cell_type": "code",
       "source": [
-        "system(\"sudo apt install fftw3 ffmpeg libsndfile1 libsndfile1-dev libfftw3-3 libfftw3-dev\")\n",
+        "#system(\"sudo apt install fftw3 ffmpeg libsndfile1 libsndfile1-dev libfftw3-3 libfftw3-dev\")\n",
         "remotes::install_github(\"maRce10/suwo\")\n",
         "install.packages(\"testthat\")\n",
         "library(testthat)\n",
@@ -44,9 +44,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a535bb4-7daa-4afa-89c0-2f073197a155"
+        "outputId": "882b0083-b9cf-460e-ec31-03f5487b4f33"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,39 +78,6 @@
             "(as ‘lib’ is unspecified)\n",
             "\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[36m──\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m─────────────────────────────────────────────────────────────────\u001b[39m\n",
-            "* checking for file ‘/tmp/RtmpSpiQnv/remotes83271ca44/maRce10-suwo-f2bd7cf/DESCRIPTION’ ... OK\n",
-            "* preparing ‘suwo’:\n",
-            "* checking DESCRIPTION meta-information ... OK\n",
-            "* checking for LF line-endings in source and make files and shell scripts\n",
-            "* checking for empty or unneeded directories\n",
-            "* looking to see if a ‘data/datalist’ file should be added\n",
-            "* building ‘suwo_0.1.0.tar.gz’\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "\n",
-            "Please cite 'suwo' as: \n",
-            "\n",
-            "\n",
-            "Araya-Salas, M., & J. Elizondo-Calvo. 2023. suwo: access nature media repositories through R. R package version 0.1.0.\n",
-            "\n"
-          ]
         }
       ]
     },
@@ -123,7 +90,7 @@
       "metadata": {
         "id": "DbJGJIzHvRSZ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +105,7 @@
         "id": "JEDFE9xfwrhZ",
         "outputId": "b4b36bb6-3c0b-4a69-edda-658b22eccea4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +132,7 @@
         "id": "m2-SZSlyiy2y",
         "outputId": "ff08af45-8f7b-453d-de0e-397d182fbfea"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +163,7 @@
         "id": "U7a74suei0rf",
         "outputId": "53d5d3ed-793d-4a10-8765-3820be88165a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +192,7 @@
         "id": "vKC3irO3xf3V",
         "outputId": "4e3f2532-10d8-4986-bfd4-80e4953bae45"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +217,7 @@
         "id": "1M8y6SuF0TpX",
         "outputId": "42214305-4649-4b24-a236-9c0c69f3ab7a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +241,7 @@
         "id": "ouWloAgBxa52",
         "outputId": "aada3e46-938c-4378-b46f-d07901e61054"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
